# mlb-kalshi-trader

./: .dockerignore  .gitignore  Dockerfile  README.md  combined_live.py  combined_paper.py  docker-compose.yml  docker-entrypoint.sh  requirements-paper.txt  setup_data.py  shared_kalshi_feed.py  shared_mlb_feed.py  test_shared_kalshi_feed.py  test_shared_mlb_feed.py
approaches/: Dockerfile  README.md  __init__.py  docker-compose.yml
backtesting/: audit_state_reversion_mechanics.py  evaluate_hybrid_strategy.py  evaluate_mispricing_model.py  evaluate_optimal_exit_policy.py  evaluate_residual_path_policy.py  evaluate_state_reversion.py  evaluate_state_reversion_baseline.py  evaluate_strategy.py  evaluate_trade_tape_hybrid.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
data/: README.md
hit_reversion_strategy/: Dockerfile  README.md  pyproject.toml  requirements.txt
hit_reversion_strategy/artifacts/: holdout_summary.json  holdout_trades.csv  robust_tuning_grid.csv  robust_tuning_summary.json  tuning_grid.csv  tuning_summary.json
hit_reversion_strategy/models/: local_win_expectancy.cbm  local_win_expectancy.metadata.json  mlb_pregame_prior.json  trade_tape_config.json
hit_reversion_strategy/scripts/: backtest.py  build_dataset.py  download_market_data.py  paper_trade.py  segment_diagnostic.py  train_win_model.py  tune.py  tune_robust.py
hit_reversion_strategy/tests/: test_strategy.py
hit_reversion_strategy/trade_tape_strategy/: __init__.py  core.py  hybrid.py
live_trading/: __init__.py  execution.py  (+1 more)
(+288 files in other folders)
