[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "mlb-kalshi-hit-reversion"
version = "1.0.0"
description = "Exact-timestamp MLB Kalshi hit-reaction reversion strategy"
requires-python = ">=3.12"
dependencies = [
  "catboost==1.2.10",
  "numpy==2.5.1",
  "pandas==3.0.3",
  "pyarrow>=18.0.0",
  "requests==2.34.2",
]

[tool.setuptools]
packages = ["trade_tape_strategy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
